ingress-study/web1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      name: web1
      labels:
        app: web1
    containers:
    - name: web1
      image: gcr.io/google-samples/hello-app:1.0
      ports:
        containerPort: 8080
