ingress-study/svc-web1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web1
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30000
  selector:
    app: web1
